[package]
name = "wsu"
version = "0.1.0"
edition = "2021"
description = "WSL2 智能工具箱"
license = "MIT"
authors = ["ric"]

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
dialoguer = "0.11"
indicatif = "0.17"

libc = "0.2"
unicode-width = "0.2"

[profile.release]
opt-level = "z"     # 优化体积
lto = true
strip = true